- add resource section to site

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Oursandbox.Is</title>
+  <link rel="image_src" href="http://oursandbox.is/assets/images/welcome.jpg" />
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
